--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,8 +1,19 @@
-<h2>{{ hero.name }} Details:</h2>
-<div>{{ hero.name }}</div>
-<div>{{ hero.id }}</div>
+<h1>{{ hero.name }}</h1>
 
-<div>
+<!-- <div>
   <label for="name">Hero name: </label>
   <input id="name" [(ngModel)]="hero.name" placeholder="name" />
-</div>
+</div> -->
+
+<form class="example-form">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Hero: </mat-label>
+    <input
+      type="text"
+      matInput
+      name="name"
+      [(ngModel)]="hero.name"
+      placeholder="name"
+    />
+  </mat-form-field>
+</form>
