--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,6 @@
     @apply font-slab font-bold;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
