--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,13 @@
 
 @layer base {
   body {
-    @apply font-lato;
+    @apply font-lato m-0 h-full;
+
+    background-image: radial-gradient(
+      circle farthest-corner at 20% 50%,
+      rgba(0, 221, 214, 1) 10%,
+      rgba(51, 102, 255, 1) 30%
+    );
   }
 
   h1,
@@ -18,7 +24,12 @@
   h6 {
     @apply font-slab font-bold;
   }
-}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  h1 {
+    @apply text-9xl;
+  }
+
+  h4 {
+    @apply text-xl;
+  }
+}
