hero details edit name

--- a/src/app/components/hero-details/hero-details.component.html
+++ b/src/app/components/hero-details/hero-details.component.html
@@ -1,6 +1,48 @@
 <div>
   <div>
-    <h3 *ngIf="hero?.name">{{ hero?.name }}</h3>
+    <!-- <div>
+  <label for="name">Hero name: </label>
+  <input id="name" [(ngModel)]="hero.name" placeholder="name" />
+</div> -->
+
+    <form
+      *ngIf="edit_name; else heroNameBlock"
+      class="edit-name-form w-[fit-content]"
+    >
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Name: </mat-label>
+        <input
+          type="text"
+          matInput
+          name="name"
+          [(ngModel)]="hero.name"
+          placeholder="name"
+        />
+      </mat-form-field>
+      <button
+        mat-icon-button
+        color="primary"
+        aria-label="Example icon button with a home icon"
+        class="flex justify-center items-center !mb-4 cursor-pointer"
+        (click)="toggleEditName()"
+      >
+        <mat-icon class="text-green-500">done_outline</mat-icon>
+      </button>
+    </form>
+    <ng-template #heroNameBlock>
+      <div class="flex items-center justify-items-start gap-5 h-[81px]">
+        <h3>{{ hero?.name }}</h3>
+        <button
+          mat-icon-button
+          color="primary"
+          aria-label="Example icon button with a home icon"
+          class="!flex !justify-center !items-center !mt-2 cursor-pointer"
+          (click)="toggleEditName()"
+        >
+          <mat-icon class="text-green-500 mb-1">edit_outline</mat-icon>
+        </button>
+      </div>
+    </ng-template>
   </div>
   <div class="flex">
     <div class="flex flex-auto flex-col py-10">
@@ -16,11 +58,11 @@
 
     <div *ngIf="hero?.photo">
       <img
-        [width]="500"
+        [width]="450"
         [title]="hero?.name"
         src="{{ hero?.photo }}"
         alt="{{ hero?.photo }}"
-        class="select-none"
+        class="select-none shadow-2xl"
       />
     </div>
   </div>
