--- a/src/app/components/heroes/heroes.component.scss
+++ b/src/app/components/heroes/heroes.component.scss
@@ -6,5 +6,10 @@
 }
 
 .hero-card {
-  @apply flex flex-col flex-shrink-0 flex-grow-0 flex-[23%] min-h-[600px] m-4 border bg-indigo-900 border-indigo-700 rounded-md p-4 bg-no-repeat bg-cover bg-center;
+  @apply flex flex-col flex-shrink-0 flex-grow-0 flex-[23%] 
+  min-h-[600px] m-4 border bg-indigo-900
+  border-indigo-700 rounded-md
+  bg-no-repeat bg-cover bg-center
+  cursor-pointer
+  hover:shadow-2xl;
 }
