angular local server implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="flex gap-10">
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/create_hero">Create Hero</a>
 </nav>
 <router-outlet></router-outlet>
