--- a/src/app/components/hero-details/hero-details.component.html
+++ b/src/app/components/hero-details/hero-details.component.html
@@ -24,7 +24,7 @@
         color="primary"
         aria-label="Example icon button with a home icon"
         class="flex justify-center items-center !mb-4 cursor-pointer"
-        (click)="toggleEditName()"
+        (click)="saveName()"
       >
         <mat-icon class="text-green-500">done_outline</mat-icon>
       </button>
@@ -37,6 +37,7 @@
           color="primary"
           aria-label="Example icon button with a home icon"
           class="!flex !justify-center !items-center !mt-2 cursor-pointer"
+        
           (click)="toggleEditName()"
         >
           <mat-icon class="text-green-500 mb-1">edit_outline</mat-icon>
