--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,17 @@
   body {
     @apply font-lato m-0 h-full;
 
-    background-image: radial-gradient(
-      circle farthest-corner at 20% 50%,
-      rgba(0, 221, 214, 1) 10%,
-      rgba(51, 102, 255, 1) 30%
-    );
+    background: #396afc; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to right,
+      #396afc,
+      #2948ff
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to right,
+      #396afc,
+      #2948ff
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 
   h1,
@@ -35,5 +41,11 @@
 
   h5 {
     @apply text-xl;
+  }
+}
+
+@layer components {
+  .nav-active {
+    @apply bg-blue-900 text-white;
   }
 }
