--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
-<h1 class="py-20">Dashboard</h1>
+<app-component-logo [logo_title]="logo_title"></app-component-logo>
 <app-hero-search></app-hero-search>
