--- a/src/app/components/heroes/heroes.component.scss
+++ b/src/app/components/heroes/heroes.component.scss
@@ -7,8 +7,9 @@
 
 .hero-card {
   @apply flex flex-col flex-shrink-0 flex-grow-0 flex-[23%] 
-  min-h-[600px] min-w-[400px] m-4 border bg-indigo-900
-  border-indigo-700 rounded-md
+  font-lato font-bold
+  min-h-[600px] min-w-[400px] m-4 border bg-blue-900
+  border-none rounded-md
   bg-no-repeat bg-cover bg-center
   cursor-pointer
   hover:shadow-2xl;
