--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
-<div>{{ title }}</div>
+<mat-toolbar class="flex gap-20">
+  <a routerLink="/heroes"
+    ><span
+      class="cursor-pointer select-none font-slab font-bold text-blue-900"
+      >{{ app_title }}</span
+    ></a
+  >
+  <nav class="flex h-full">
+    <a routerLink="/dashboard" routerLinkActive="nav-active" class=""
+      ><button
+        mat-button
+        class="h-full px-1 w-[150px] flex items-center justify-center"
+      >
+        Dashboard
+      </button></a
+    >
+    <a routerLink="/heroes" routerLinkActive="nav-active">
+      <button
+        mat-button
+        class="h-full px-1 w-[150px] flex items-center justify-center"
+      >
+        Heroes
+      </button></a
+    >
+    <a routerLink="/create_hero" routerLinkActive="nav-active">
+      <button
+        mat-button
+        class="h-full px-1 w-[150px] flex items-center justify-center"
+      >
+        Create Hero
+      </button></a
+    >
+  </nav>
+</mat-toolbar>
+<router-outlet></router-outlet>
