fixed create hero front-end

--- a/src/app/mini-components/create-hero-input/create-hero-input.component.html
+++ b/src/app/mini-components/create-hero-input/create-hero-input.component.html
@@ -1,6 +1,7 @@
 <mat-form-field class="" appearance="fill">
   <mat-label>{{ inputTitle }}: </mat-label>
   <input
+    autocomplete="off"
     type="text"
     matInput
     [name]="inputTitle"
