import of heroes data from hasura

--- a/src/app/components/hero-details/hero-details.component.html
+++ b/src/app/components/hero-details/hero-details.component.html
@@ -74,7 +74,7 @@
       <img
         [width]="400"
         [title]="hero.name"
-        src="{{ hero.photo }}"
+        src="{{ SRV_NODE }}{{ hero.photo }}"
         alt="{{ hero.photo }}"
         class="select-none shadow-2xl rounded-md"
       />
