--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,21 @@
 <app-component-logo [logo_title]="logo_title"></app-component-logo>
 <app-hero-search></app-hero-search>
+
+<div class="flex flex-col gap-5 w-[600px] m-auto my-10">
+  <div
+    *ngFor="let hero of heroes"
+    class="bg-white rounded-md flex gap-5 cursor-pointer"
+  >
+    <div
+      class="hero-image"
+      style="background-image: url('{{ SRV_NODE }}{{ hero.photo }}')"
+    ></div>
+    <div class="flex flex-col justify-between py-2">
+      <div class="font-slab font-bold">{{ hero.name }}</div>
+      <div class="select-none flex items-center gap-2">
+        <mat-icon class="text-red-600">stars</mat-icon>
+        <span class="text-lg">{{ hero.rating }}</span>
+      </div>
+    </div>
+  </div>
+</div>
