--- a/src/app/components/heroes/heroes.component.scss
+++ b/src/app/components/heroes/heroes.component.scss
@@ -6,11 +6,10 @@
 }
 
 .hero-card {
-  @apply flex flex-col flex-shrink-0 flex-grow-0 flex-[23%] 
+  @apply relative flex flex-col flex-shrink-0 flex-grow-0 flex-[20%] 
   font-lato font-bold
-  min-h-[600px] min-w-[400px] m-4 border bg-blue-900
+  min-h-[500px] min-w-[350px] m-4 border bg-blue-900
   border-none rounded-md
   bg-no-repeat bg-cover bg-center
-  cursor-pointer
   hover:shadow-2xl;
 }
