--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,10 @@
-<div
-  class="flex items-top justify-between w-full min-h-[70px] bg-gray-50 py-4 px-8 mt-20"
->
-  <div class="flex flex-col gap-2">
+<div class="flex items-top justify-between w-full bg-gray-50 py-4 px-8 mt-20">
+  <!-- left side -->
+  <div class="flex flex-col w-[33%]">
     <div
-      class="px-1 py-4 select-none cursor-default font-bold font-slab text-gray-400"
+      class="px-1 py-2 select-none cursor-default font-bold font-slab text-gray-400"
     >
-      Contact me:
+      Contact me
     </div>
     <ul class="flex flex-col gap-2 text-sm cursor-default">
       <li class="flex items-center">
@@ -18,33 +17,42 @@
       </li>
     </ul>
   </div>
-  <div class="py-4 font-slab font-bold select-none text-gray-400">AG-2022</div>
-  <div class="flex gap-10">
+
+  <!-- center side -->
+  <div
+    class="flex py-2 width-[33%] font-slab font-bold select-none text-gray-400"
+  >
+    AG-2022
+  </div>
+
+  <!-- right side -->
+  <div class="flex justify-end w-[33%] gap-20">
     <div>
       <div
-        class="flex px-1 py-4 select-none cursor-default font-bold font-slab text-gray-400"
+        class="flex py-2 select-none cursor-default font-bold font-slab text-gray-400"
       >
-        Frontend:
+        Frontend
       </div>
-      <ul class="flex px-1 flex-col cursor-default">
+      <ul class="flex flex-col cursor-default">
         <li class="flex items-center gap-2">
-          <span class="font-slab text-red-600">Angular</span>
+          <span class="font-slab text-sm text-red-600">Angular</span>
         </li>
       </ul>
     </div>
+
     <div>
       <div
-        class="flex px-1 py-4 select-none cursor-default font-bold font-slab text-gray-400"
+        class="flex py-2 select-none cursor-default font-bold font-slab text-gray-400"
       >
-        Backend:
+        Backend
       </div>
-      <ul class="flex px-1 gap-2 flex-col cursor-default">
+      <ul class="flex gap-2 flex-col cursor-default">
         <li class="flex items-center gap-2">
-          <span class="font-slab text-emerald-700">Nodejs:</span>
+          <span class="font-slab text-sm text-emerald-700">Nodejs:</span>
           <span class="text-sm">data storage</span>
         </li>
         <li class="flex items-center gap-2">
-          <span class="font-slab text-pink-600">Hasura:</span>
+          <span class="font-slab text-sm text-pink-600">Hasura:</span>
           <span class="text-sm">postgres db</span>
         </li>
       </ul>
