--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,6 @@
-<div class="flex items-top justify-between w-full bg-gray-50 py-4 px-8 mt-20">
+<div
+  class="flex items-top justify-between w-full bg-gray-50 py-4 px-8 min-h-[130px]"
+>
   <!-- left side -->
   <div class="flex flex-col w-[33%]">
     <div
