--- a/src/app/mini-components/component-logo/component-logo.component.html
+++ b/src/app/mini-components/component-logo/component-logo.component.html
@@ -1,5 +1,3 @@
-<h1
-  class="font-slab self-center py-20 w-full text-center text-white select-none"
->
+<h1 class="font-slab self-center w-full text-center text-white select-none">
   {{ logo_title }}
 </h1>
