--- a/src/app/mini-components/hero-search/hero-search.component.html
+++ b/src/app/mini-components/hero-search/hero-search.component.html
@@ -1,17 +1,13 @@
-<div class="bg-white m-auto w-[fit-content] rounded-md">
-  <mat-form-field appearance="fill">
-    <mat-label>Find your hero: </mat-label>
-    <input
-      autocomplete="off"
-      type="text"
-      matInput
-      [name]="'Find your hero'"
-      [(ngModel)]="input_data"
-      [placeholder]="'name...'"
-      (ngModelChange)="input_dataChange.emit(input_data)"
-    />
-    <button class="!min-w-[20px] !p-0" matSuffix mat-button>
-      <mat-icon>search</mat-icon>
-    </button>
-  </mat-form-field>
+<div class="flex items-center justify-center gap-2 w-fuill">
+  <input
+    autocomplete="off"
+    type="text"
+    matInput
+    [name]="'Find your hero'"
+    [(ngModel)]="input_data"
+    [placeholder]="'name...'"
+    (ngModelChange)="input_dataChange.emit(input_data)"
+    class="min-w-[300px] w-[fit-content] rounded-md bg-white p-4 focus:outline-none"
+  />
+  <mat-icon class="text-4xl !w-10 !h-10 text-white">search</mat-icon>
 </div>
