--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,14 +5,19 @@
     (input_dataChange)="inputDataChange($event)"
   ></app-hero-search>
 
-  <div class="flex flex-col gap-5 w-[600px] m-auto">
+  <div
+    class="flex flex-col gap-5 w-[600px] m-auto"
+    [ngClass]="{ 'min-h-[500px]': input_data }"
+  >
     <div
       *ngFor="let hero of heroes"
       class="bg-white rounded-md flex gap-5 cursor-pointer"
+      (click)="geHeroDetails(hero)"
     >
       <div
         class="hero-image"
-        style="background-image: url('{{ SRV_NODE }}{{ hero.photo }}')"
+        style="
+        background-image: url('{{ SRV_NODE_SUPERHEROES }}{{ hero.photo }}')"
       ></div>
       <div class="flex flex-col justify-between py-2">
         <div class="font-slab font-bold">{{ hero.name }}</div>
@@ -23,4 +28,14 @@
       </div>
     </div>
   </div>
+  <button
+    *ngIf="!input_data"
+    title="More heroes"
+    mat-mini-fab
+    color="primary"
+    class="upload-btn !text-blue-900 !bg-white self-center flex"
+    (click)="fetchMoreHeroes()"
+  >
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </button>
 </div>
