--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,18 +3,31 @@
   <app-hero-search
     [(input_data)]="input_data"
     (input_dataChange)="inputDataChange($event)"
+    (clearInput)="input_data = ''"
   ></app-hero-search>
 
-  <div class="flex flex-col gap-5 w-[600px] m-auto">
+  <div
+    class="flex flex-col gap-5 w-[600px] m-auto"
+    [ngClass]="{ 'min-h-[500px]': input_data }"
+  >
     <div
       *ngFor="let hero of heroes"
-      class="bg-white rounded-md flex gap-5 cursor-pointer"
+      class="relative bg-transparent rounded-md flex cursor-pointer"
+      (click)="geHeroDetails(hero)"
     >
       <div
-        class="hero-image"
-        style="background-image: url('{{ SRV_NODE }}{{ hero.photo }}')"
+        class="absolute left-[-80px] top-1/2 -translate-x-1/2 -translate-y-1/2 px-8 flex items-center jusitfy-center text-5xl text-white font-slab w-[80px] select-none"
+      >
+        {{ hero.rating_place }}
+      </div>
+      <div
+        class="hero-image bg-white"
+        style="
+        background-image: url('{{ SRV_NODE_SUPERHEROES }}{{ hero.photo }}')"
       ></div>
-      <div class="flex flex-col justify-between py-2">
+      <div
+        class="flex flex-col justify-between p-2 bg-white w-full rounded-r-md"
+      >
         <div class="font-slab font-bold">{{ hero.name }}</div>
         <div class="select-none flex items-center gap-2">
           <mat-icon class="text-red-600">stars</mat-icon>
@@ -23,4 +36,14 @@
       </div>
     </div>
   </div>
+  <button
+    *ngIf="!input_data && !fetched_all_heroes"
+    title="More heroes"
+    mat-mini-fab
+    color="primary"
+    class="upload-btn !text-blue-900 !bg-white self-center flex"
+    (click)="fetchMoreHeroes()"
+  >
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </button>
 </div>
