--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -28,7 +28,7 @@
             >thumb_up</mat-icon
           >
           <span
-            class="w-8 h-8 flex items-center justify-center font-bold bg-white rounded-full select-none"
+            class="w-10 h-10 p-2 flex items-center justify-center font-bold bg-white rounded-full select-none"
             >{{ hero.rating }}</span
           >
           <mat-icon
